# the_client_ui_showcase

./: .clang-tidy  .gitignore  CMakeLists.txt
asset/: asset.qrc
cmake_utility/: configure_installation.cmake  create_compiler_options.cmake  organize_source_files.cmake  windowzify_linux_loader.cmake
include/private/the_client_ui_showcase/: choose_view_widget.hh
include/private/the_client_ui_showcase/compact/: compact_mainwindow.hh  user_manager_add.hh  user_manager_config.hh  user_manager_edit.hh
include/private/the_client_ui_showcase/sample_widget/: plot.hh
include/private/the_client_ui_showcase/utility/: layout.hh
src/: choose_view_widget.cc  main.cc
src/compact/: compact_mainwindow.cc  user_manager_add.cc  user_manager_config.cc  user_manager_edit.cc
src/sample_widget/: plot.cc
src/utility/: layout.cc
